# ai-crate-digger

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  START_HERE.md  install.sh  package-for-friend.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: GETTING_STARTED.md  INSTALLATION.md  MCP_CHATGPT.md  MCP_CLAUDE.md  MCP_GENERIC.md  MCP_SETUP.md  TROUBLESHOOTING.md  mcp-tools.md
docs/plans/: 2025-01-25-dj-catalog-design.md  2025-01-25-dj-catalog-implementation.md  2025-01-25-dj-music-catalog.md  2026-01-26-gui-design.md
docs/skills/: playlist-creator.md
src/ai_crate_digger/: __main__.py
src/ai_crate_digger/analysis/: __init__.py  analyzer.py  bpm.py  genre.py  key.py  parallel.py
src/ai_crate_digger/cli/: __init__.py  main.py  playlist.py  scan.py  search.py  stats.py
src/ai_crate_digger/core/: __init__.py  config.py  exceptions.py  models.py
src/ai_crate_digger/mcp/: __init__.py  server.py  tools.py
src/ai_crate_digger/playlist/: __init__.py  export.py  filters.py  generator.py  harmonic.py
src/ai_crate_digger/scanning/: __init__.py  extractor.py  hasher.py  scanner.py
src/ai_crate_digger/storage/: __init__.py  database.py  vectors.py
src/dj_catalog/: __init__.py
src/dj_catalog/analysis/: __init__.py  analyzer.py  bpm.py  energy.py  parallel.py
src/dj_catalog/cli/: __init__.py  main.py  playlist.py  scan.py  search.py  stats.py
src/dj_catalog/core/: __init__.py  config.py  models.py
src/dj_catalog/mcp/: __init__.py  server.py  tools.py
src/dj_catalog/playlist/: __init__.py  export.py  filters.py  generator.py  harmonic.py
src/dj_catalog/scanning/: __init__.py  extractor.py
src/dj_catalog/storage/: __init__.py  database.py  vectors.py
tests/: __init__.py  conftest.py
tests/analysis/: test_analyzer.py  test_bpm.py  test_energy.py  test_key.py
tests/cli/: __init__.py  test_playlist.py  test_scan.py  test_search.py  test_stats.py
tests/core/: test_config.py  test_models.py
tests/integration/: test_full_workflow.py
tests/mcp/: test_ai_workflow_integration.py  test_build_playlist.py  test_get_candidate_pool.py  test_helpers.py  test_tools.py  test_validate_playlist_order.py
tests/playlist/: __init__.py  test_export.py  test_filters.py  test_generator.py  test_harmonic.py
tests/scanning/: __init__.py  test_extractor.py  test_hasher.py  test_scanner.py
tests/storage/: test_database.py  test_vectors.py
