[project]
name = "ai-crate-digger"
version = "0.1.0"
description = "AI-powered music library scanner and DJ playlist generator with MCP integration"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
keywords = ["dj", "music", "playlist", "mcp", "ai", "rekordbox"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "mutagen>=1.47",
    "librosa>=0.10,<0.11",
    "essentia>=2.1b5",
    "chromadb>=0.4",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
    "pre-commit>=3.6",
]

[project.scripts]
crate = "ai_crate_digger.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_crate_digger"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["essentia.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT", "RET", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "--cov=ai_crate_digger --cov-report=term-missing --cov-fail-under=55"

[tool.coverage.run]
branch = true
source = ["src/ai_crate_digger"]
